# alfa-brige-360

./: .gitignore  Dockerfile  Nowy dokument sformatowany.rtf  README.md  app.py  engine v2.py  engine_v2.py  extensions_config.json  index.html  install.bat  package.json  requirements.txt  start.bat  todo.md  userGuide.md
.alfa_snapshots/: .github__workflows__alfa_core.yml  .vscode__copilot-instructions.md  .vscode__launch.json  ALFA_Mail_Project__src____init__.py  ALFA_Mail_Project__src__modules__cerber__service.py  ALFA_Mail__QUICKSTART.md  ALFA_Mail__README_DEPLOYMENT.md  ALFA_Mail__config__magestik_config.json  ALFA_Mail__core____init__.py  ALFA_Mail__core__cerber____init__.py  ALFA_Mail__docs__UI_GENERATOR_FEATURE.md  alfa_brain__README.md  alfa_brain__brain.py  alfa_brain__config__plugins.json  alfa_brain__config__system.json  alfa_brain__core__engine.py  alfa_brain__core__event_bus.py  alfa_brain__core__plugin_engine.py  alfa_brain__core__secure_exec.py  alfa_cloud____init__.py  alfa_cloud____main__.py  alfa_cloud__agents____init__.py  alfa_cloud__agents__ai_agent.py  alfa_cloud__ai__analyzer.py  alfa_cloud__api__auth.py  alfa_cloud__api__routes.py  alfa_cloud__api__server.py  alfa_cloud__api__ws.py  alfa_cloud__config__cloud_config.json  alfa_cloud__core__encryption.py  alfa_cloud__core__event_bus.py  alfa_cloud__core__sync_engine.py  alfa_cloud__security____init__.py  alfa_cloud__security__cerber_v7____init__.py  alfa_cloud__security__cerber_v7____main__.py  alfa_cloud__security__cerber_v7__living_code_engine.py  alfa_cloud__security__cerber_v7__manager.py  alfa_core____init__.py  alfa_core__config_loader.py  alfa_core__executor.py  (+66 more)
ALFA_Mail/: DEPLOYMENT_CHECKLIST.md  SYSTEM_STATUS.md  build.gradle.kts  settings.gradle.kts  (+1 more)
alfa_keyvault/: Cargo.toml
alfa_keyvault/src/: brain.rs  error.rs  lib.rs  policy.rs  snapshot.rs
alfa_keyvault/src/crypto/: aead.rs  argon2_kdf.rs  hkdf_derive.rs  mod.rs  zeroize_utils.rs
(+189 files in other folders)
